--- a/test_clustering.ipynb
+++ b/test_clustering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,8 @@
      "text": [
       "Original dataset\n",
       "With normalization : yes\n",
-      "NMI : 0.8238116255820676\n"
+      "NMI : 0.8563039573116744\n",
+      "ARI : 0.5869091769612755\n"
      ]
     }
    ],
@@ -155,7 +156,8 @@
     "pred_clusters = kmeans.labels_\n",
     "print(\"Original dataset\")\n",
     "print(\"With normalization : \" + with_normalization_str)\n",
-    "print(\"NMI :\", normalized_mutual_info_score(labels_true, pred_clusters))"
+    "print(\"NMI :\", normalized_mutual_info_score(labels_true, pred_clusters))\n",
+    "print(\"ARI :\", adjusted_rand_score(labels_true, pred_clusters))"
    ]
   },
   {
@@ -176,7 +178,8 @@
      "text": [
       "PCA\n",
       "With normalization : yes\n",
-      "NMI : 0.8488860800229372\n"
+      "NMI : 0.8399617334031217\n",
+      "ARI : 0.5520067367408009\n"
      ]
     }
    ],
@@ -188,7 +191,8 @@
     "pred_clusters = kmeans.labels_\n",
     "print(\"PCA\")\n",
     "print(\"With normalization : \" + with_normalization_str)\n",
-    "print(\"NMI :\", normalized_mutual_info_score(labels_true, pred_clusters))"
+    "print(\"NMI :\", normalized_mutual_info_score(labels_true, pred_clusters))\n",
+    "print(\"ARI :\", adjusted_rand_score(labels_true, pred_clusters))"
    ]
   },
   {
@@ -200,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 447,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +213,8 @@
      "text": [
       "RPCA\n",
       "With normalization : yes\n",
-      "NMI : 0.858952962929226\n"
+      "NMI : 0.8507415936944136\n",
+      "ARI : 0.6068177553025976\n"
      ]
     }
    ],
@@ -227,7 +232,8 @@
     "\n",
     "print(\"RPCA\")\n",
     "print(\"With normalization : \" + with_normalization_str)\n",
-    "print(\"NMI :\", normalized_mutual_info_score(labels_true, pred_clusters))"
+    "print(\"NMI :\", normalized_mutual_info_score(labels_true, pred_clusters))\n",
+    "print(\"ARI :\", adjusted_rand_score(labels_true, pred_clusters))"
    ]
   },
   {
@@ -239,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +274,8 @@
      "text": [
       "GLPCA\n",
       "With normalization : yes\n",
-      "NMI : 0.4447745894836239\n"
+      "NMI : 0.46396688969087196\n",
+      "ARI : 0.6068177553025976\n"
      ]
     }
    ],
@@ -281,7 +288,8 @@
     "labels_pred = kmeans.labels_\n",
     "print(\"GLPCA\")\n",
     "print(\"With normalization : \" + with_normalization_str)\n",
-    "print(\"NMI :\", normalized_mutual_info_score(labels_true, labels_pred))"
+    "print(\"NMI :\", normalized_mutual_info_score(labels_true, labels_pred))\n",
+    "print(\"ARI :\", adjusted_rand_score(labels_true, pred_clusters))"
    ]
   },
   {
@@ -293,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +329,8 @@
      "text": [
       "RGLPCA\n",
       "With normalization : yes\n",
-      "NMI : 0.43264083197691744\n"
+      "NMI : 0.42983684904613495\n",
+      "ARI : 0.6068177553025976\n"
      ]
     }
    ],
@@ -334,7 +343,8 @@
     "labels_pred = kmeans.labels_\n",
     "print(\"RGLPCA\")\n",
     "print(\"With normalization : \" + with_normalization_str)\n",
-    "print(\"NMI :\", normalized_mutual_info_score(labels_true, labels_pred))"
+    "print(\"NMI :\", normalized_mutual_info_score(labels_true, labels_pred))\n",
+    "print(\"ARI :\", adjusted_rand_score(labels_true, pred_clusters))"
    ]
   },
   {
@@ -346,33 +356,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RPCA\n",
+      "Our PCA\n",
       "With normalization : yes\n",
-      "NMI : 0.862944940413809\n"
+      "NMI : 1.0\n",
+      "ARI : 1.0\n"
      ]
     }
    ],
    "source": [
-    "model = models.RobustPCA()\n",
-    "L, S = model.fit(X_data)\n",
-    "\n",
-    "\n",
+    "our_PCA_L = []\n",
+    "for idx in range(40):\n",
+    "    X_data_class2 = X_data2[idx*n_data_by_class:(idx+1)*n_data_by_class]\n",
+    "    X_data_class = X_data[idx*n_data_by_class:(idx+1)*n_data_by_class]\n",
+    "    G = generate_classification_graph(X_data_class2, n_data_by_class)\n",
+    "    model = models.OurPCA()\n",
+    "    L, S = model.fit(X_data_class, G, gamma=1e-3)\n",
+    "    our_PCA_L.append(L)\n",
+    "        \n",
+    "L = np.concatenate(our_PCA_L, axis=0)\n",
     "U, S, Q = np.linalg.svd(L, full_matrices=False)\n",
     "Q = L @ Q.T\n",
     "\n",
     "kmeans = KMeans(n_clusters=N_classes).fit(Q)\n",
-    "pred_clusters = kmeans.labels_\n",
     "\n",
-    "print(\"RPCA\")\n",
+    "pred_clusters = kmeans.labels_\n",
+    "err = clustering_error(labels_true, pred_clusters)\n",
+    "\n",
+    "print(\"Our PCA\")\n",
     "print(\"With normalization : \" + with_normalization_str)\n",
-    "print(\"NMI :\", normalized_mutual_info_score(labels_true, pred_clusters))"
+    "print(\"NMI :\", normalized_mutual_info_score(labels_true, pred_clusters))\n",
+    "print(\"ARI :\", adjusted_rand_score(labels_true, pred_clusters))"
    ]
   },
   {
@@ -384,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +463,8 @@
      "text": [
       "Original dataset\n",
       "With normalization : yes\n",
-      "NMI : 0.6373573023186193\n"
+      "NMI : 0.6505180514306992\n",
+      "ARI : 0.24661164887039375\n"
      ]
     }
    ],
@@ -453,7 +474,8 @@
     "pred_clusters = kmeans.labels_\n",
     "print(\"Original dataset\")\n",
     "print(\"With normalization : \" + with_normalization_str)\n",
-    "print(\"NMI :\", normalized_mutual_info_score(labels_true, pred_clusters))"
+    "print(\"NMI :\", normalized_mutual_info_score(labels_true, pred_clusters))\n",
+    "print(\"ARI :\", adjusted_rand_score(labels_true, pred_clusters))"
    ]
   },
   {
@@ -465,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +496,8 @@
      "text": [
       "PCA\n",
       "With normalization : yes\n",
-      "NMI : 0.6638308891006159\n"
+      "NMI : 0.6656693207733184\n",
+      "ARI : 0.27731616217001515\n"
      ]
     }
    ],
@@ -486,7 +509,8 @@
     "pred_clusters = kmeans.labels_\n",
     "print(\"PCA\")\n",
     "print(\"With normalization : \" + with_normalization_str)\n",
-    "print(\"NMI :\", normalized_mutual_info_score(labels_true, pred_clusters))"
+    "print(\"NMI :\", normalized_mutual_info_score(labels_true, pred_clusters))\n",
+    "print(\"ARI :\", adjusted_rand_score(labels_true, pred_clusters))"
    ]
   },
   {
@@ -498,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +531,8 @@
      "text": [
       "RPCA\n",
       "With normalization : yes\n",
-      "NMI : 0.648999267157239\n"
+      "NMI : 0.6718053469484496\n",
+      "ARI : 0.27218039017345247\n"
      ]
     }
    ],
@@ -525,7 +550,8 @@
     "\n",
     "print(\"RPCA\")\n",
     "print(\"With normalization : \" + with_normalization_str)\n",
-    "print(\"NMI :\", normalized_mutual_info_score(labels_true, pred_clusters))"
+    "print(\"NMI :\", normalized_mutual_info_score(labels_true, pred_clusters))\n",
+    "print(\"ARI :\", adjusted_rand_score(labels_true, pred_clusters))"
    ]
   },
   {
@@ -537,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +592,8 @@
      "text": [
       "GLPCA\n",
       "With normalization : yes\n",
-      "NMI : 0.2975833776104032\n"
+      "NMI : 0.291933145390955\n",
+      "ARI : 0.27218039017345247\n"
      ]
     }
    ],
@@ -575,7 +602,8 @@
     "labels_pred = kmeans.labels_\n",
     "print(\"GLPCA\")\n",
     "print(\"With normalization : \" + with_normalization_str)\n",
-    "print(\"NMI :\", normalized_mutual_info_score(labels_true, labels_pred))"
+    "print(\"NMI :\", normalized_mutual_info_score(labels_true, labels_pred))\n",
+    "print(\"ARI :\", adjusted_rand_score(labels_true, pred_clusters))"
    ]
   },
   {
@@ -587,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +643,8 @@
      "text": [
       "RGLPCA\n",
       "With normalization : yes\n",
-      "NMI : 0.31852996251869653\n"
+      "NMI : 0.3229686740204831\n",
+      "ARI : 0.27218039017345247\n"
      ]
     }
    ],
@@ -624,7 +653,8 @@
     "labels_pred = kmeans.labels_\n",
     "print(\"RGLPCA\")\n",
     "print(\"With normalization : \" + with_normalization_str)\n",
-    "print(\"NMI :\", normalized_mutual_info_score(labels_true, labels_pred))"
+    "print(\"NMI :\", normalized_mutual_info_score(labels_true, labels_pred))\n",
+    "print(\"ARI :\", adjusted_rand_score(labels_true, pred_clusters))"
    ]
   },
   {
@@ -636,33 +666,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RPCA\n",
+      "Our PCA\n",
       "With normalization : yes\n",
-      "NMI : 0.6451585368910414\n"
+      "NMI : 0.9825295711968912\n",
+      "ARI : 0.9480661256766877\n"
      ]
     }
    ],
    "source": [
-    "model = models.RobustPCA()\n",
-    "L, S = model.fit(X_data)\n",
-    "\n",
-    "\n",
+    "our_PCA_L = []\n",
+    "for idx in range(40):\n",
+    "    X_data_class2 = X_data2[idx*n_data_by_class:(idx+1)*n_data_by_class]\n",
+    "    X_data_class = X_data[idx*n_data_by_class:(idx+1)*n_data_by_class]\n",
+    "    G = generate_classification_graph(X_data_class2, n_data_by_class)\n",
+    "    model = models.OurPCA()\n",
+    "    L, S = model.fit(X_data_class, G, gamma=0.5)\n",
+    "    our_PCA_L.append(L)\n",
+    "        \n",
+    "L = np.concatenate(our_PCA_L, axis=0)\n",
     "U, S, Q = np.linalg.svd(L, full_matrices=False)\n",
     "Q = L @ Q.T\n",
     "\n",
     "kmeans = KMeans(n_clusters=N_classes).fit(Q)\n",
-    "pred_clusters = kmeans.labels_\n",
     "\n",
-    "print(\"RPCA\")\n",
+    "pred_clusters = kmeans.labels_\n",
+    "err = clustering_error(labels_true, pred_clusters)\n",
+    "\n",
+    "print(\"Our PCA\")\n",
     "print(\"With normalization : \" + with_normalization_str)\n",
-    "print(\"NMI :\", normalized_mutual_info_score(labels_true, pred_clusters))"
+    "print(\"NMI :\", normalized_mutual_info_score(labels_true, pred_clusters))\n",
+    "print(\"ARI :\", adjusted_rand_score(labels_true, pred_clusters))"
    ]
   },
   {
@@ -674,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -753,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -790,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -804,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -848,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -869,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -901,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -941,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -966,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -983,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1013,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1045,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1090,7 +1130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
